k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zenstats
  labels:
    app.kubernetes.io/part-of: zenstats
